gen/JSONParser.java
// Generated from C:/Users/Aleister/IdeaProjects/FEUP-COMP/src/LexerParserRules\JSON.g4 by ANTLR 4.5
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class JSONParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		NAMELIT=1, GROUPLIT=2, GROUPSLIT=3, NODELIT=4, LINKLIT=5, SOURCELIT=6, 
		TARGETLIT=7, VALUELIT=8, INT=9, DOUBLE=10, STRING=11, NAME=12, OPBR=13, 
		CLBR=14, OPSQBR=15, CLSQBR=16, COMMA=17, COLON=18, QUOTATION=19, EQUAL=20, 
		WS=21;
	public static final int
		RULE_start = 0, RULE_json = 1, RULE_nodeSection = 2, RULE_linkSection = 3, 
		RULE_firstSection = 4, RULE_extraSection = 5, RULE_section = 6, RULE_nodelist = 7, 
		RULE_linklist = 8, RULE_node = 9, RULE_nodeAttrList = 10, RULE_link = 11, 
		RULE_linkNodeTS = 12, RULE_linkAttrList = 13, RULE_nodeAttr = 14, RULE_nodeAttrValue = 15, 
		RULE_linkAttr = 16, RULE_linkAttrValue = 17, RULE_groupSection = 18, RULE_groupOptionList = 19, 
		RULE_groupOption = 20, RULE_groupAttributeList = 21, RULE_groupAttr = 22, 
		RULE_groupAttrValue = 23;
	public static final String[] ruleNames = {
		"start", "json", "nodeSection", "linkSection", "firstSection", "extraSection", 
		"section", "nodelist", "linklist", "node", "nodeAttrList", "link", "linkNodeTS", 
		"linkAttrList", "nodeAttr", "nodeAttrValue", "linkAttr", "linkAttrValue", 
		"groupSection", "groupOptionList", "groupOption", "groupAttributeList", 
		"groupAttr", "groupAttrValue"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'name'", "'group'", "'groups'", "'nodes'", "'links'", "'source'", 
		"'target'", "'value'", null, null, null, null, "'{'", "'}'", "'['", "']'", 
		"','", "':'", "'\"'", "'='"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "NAMELIT", "GROUPLIT", "GROUPSLIT", "NODELIT", "LINKLIT", "SOURCELIT", 
		"TARGETLIT", "VALUELIT", "INT", "DOUBLE", "STRING", "NAME", "OPBR", "CLBR", 
		"OPSQBR", "CLSQBR", "COMMA", "COLON", "QUOTATION", "EQUAL", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override
	@NotNull
	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "JSON.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public JSONParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public JsonContext json() {
			return getRuleContext(JsonContext.class,0);
		}
		public TerminalNode EOF() { return getToken(JSONParser.EOF, 0); }
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).exitStart(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitStart(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48); 
			json();
			setState(49); 
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class JsonContext extends ParserRuleContext {
		public TerminalNode OPBR() { return getToken(JSONParser.OPBR, 0); }
		public FirstSectionContext firstSection() {
			return getRuleContext(FirstSectionContext.class,0);
		}
		public TerminalNode CLBR() { return getToken(JSONParser.CLBR, 0); }
		public JsonContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_json; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).enterJson(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).exitJson(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitJson(this);
			else return visitor.visitChildren(this);
		}
	}

	public final JsonContext json() throws RecognitionException {
		JsonContext _localctx = new JsonContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_json);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); 
			match(OPBR);
			setState(52); 
			firstSection();
			setState(53); 
			match(CLBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeSectionContext extends ParserRuleContext {
		public List<TerminalNode> QUOTATION() { return getTokens(JSONParser.QUOTATION); }
		public TerminalNode QUOTATION(int i) {
			return getToken(JSONParser.QUOTATION, i);
		}
		public TerminalNode NODELIT() { return getToken(JSONParser.NODELIT, 0); }
		public TerminalNode COLON() { return getToken(JSONParser.COLON, 0); }
		public TerminalNode OPSQBR() { return getToken(JSONParser.OPSQBR, 0); }
		public NodelistContext nodelist() {
			return getRuleContext(NodelistContext.class,0);
		}
		public TerminalNode CLSQBR() { return getToken(JSONParser.CLSQBR, 0); }
		public NodeSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).enterNodeSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).exitNodeSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitNodeSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeSectionContext nodeSection() throws RecognitionException {
		NodeSectionContext _localctx = new NodeSectionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_nodeSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55); 
			match(QUOTATION);
			setState(56); 
			match(NODELIT);
			setState(57); 
			match(QUOTATION);
			setState(58); 
			match(COLON);
			setState(59); 
			match(OPSQBR);
			setState(60); 
			nodelist();
			setState(61); 
			match(CLSQBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinkSectionContext extends ParserRuleContext {
		public List<TerminalNode> QUOTATION() { return getTokens(JSONParser.QUOTATION); }
		public TerminalNode QUOTATION(int i) {
			return getToken(JSONParser.QUOTATION, i);
		}
		public TerminalNode LINKLIT() { return getToken(JSONParser.LINKLIT, 0); }
		public TerminalNode COLON() { return getToken(JSONParser.COLON, 0); }
		public TerminalNode OPSQBR() { return getToken(JSONParser.OPSQBR, 0); }
		public LinklistContext linklist() {
			return getRuleContext(LinklistContext.class,0);
		}
		public TerminalNode CLSQBR() { return getToken(JSONParser.CLSQBR, 0); }
		public LinkSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linkSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).enterLinkSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).exitLinkSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitLinkSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinkSectionContext linkSection() throws RecognitionException {
		LinkSectionContext _localctx = new LinkSectionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_linkSection);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63); 
			match(QUOTATION);
			setState(64); 
			match(LINKLIT);
			setState(65); 
			match(QUOTATION);
			setState(66); 
			match(COLON);
			setState(67); 
			match(OPSQBR);
			setState(68); 
			linklist();
			setState(69); 
			match(CLSQBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FirstSectionContext extends ParserRuleContext {
		public NodeSectionContext nodeSection() {
			return getRuleContext(NodeSectionContext.class,0);
		}
		public ExtraSectionContext extraSection() {
			return getRuleContext(ExtraSectionContext.class,0);
		}
		public LinkSectionContext linkSection() {
			return getRuleContext(LinkSectionContext.class,0);
		}
		public GroupSectionContext groupSection() {
			return getRuleContext(GroupSectionContext.class,0);
		}
		public FirstSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_firstSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).enterFirstSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).exitFirstSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitFirstSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FirstSectionContext firstSection() throws RecognitionException {
		FirstSectionContext _localctx = new FirstSectionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_firstSection);
		try {
			setState(80);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(71); 
				nodeSection();
				setState(72); 
				extraSection();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(74); 
				linkSection();
				setState(75); 
				extraSection();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(77); 
				groupSection();
				setState(78); 
				extraSection();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExtraSectionContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(JSONParser.COMMA, 0); }
		public SectionContext section() {
			return getRuleContext(SectionContext.class,0);
		}
		public ExtraSectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extraSection; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).enterExtraSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).exitExtraSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitExtraSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExtraSectionContext extraSection() throws RecognitionException {
		ExtraSectionContext _localctx = new ExtraSectionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_extraSection);
		try {
			setState(85);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(82); 
				match(COMMA);
				setState(83); 
				section();
				}
				break;
			case CLBR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SectionContext extends ParserRuleContext {
		public NodeSectionContext nodeSection() {
			return getRuleContext(NodeSectionContext.class,0);
		}
		public ExtraSectionContext extraSection() {
			return getRuleContext(ExtraSectionContext.class,0);
		}
		public LinkSectionContext linkSection() {
			return getRuleContext(LinkSectionContext.class,0);
		}
		public GroupSectionContext groupSection() {
			return getRuleContext(GroupSectionContext.class,0);
		}
		public SectionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_section; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).enterSection(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).exitSection(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitSection(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SectionContext section() throws RecognitionException {
		SectionContext _localctx = new SectionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_section);
		try {
			setState(96);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87); 
				nodeSection();
				setState(88); 
				extraSection();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(90); 
				linkSection();
				setState(91); 
				extraSection();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(93); 
				groupSection();
				setState(94); 
				extraSection();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodelistContext extends ParserRuleContext {
		public NodeContext node() {
			return getRuleContext(NodeContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(JSONParser.COMMA, 0); }
		public NodelistContext nodelist() {
			return getRuleContext(NodelistContext.class,0);
		}
		public NodelistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodelist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).enterNodelist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).exitNodelist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitNodelist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodelistContext nodelist() throws RecognitionException {
		NodelistContext _localctx = new NodelistContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_nodelist);
		try {
			setState(103);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(98); 
				node();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(99); 
				node();
				setState(100); 
				match(COMMA);
				setState(101); 
				nodelist();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinklistContext extends ParserRuleContext {
		public LinkContext link() {
			return getRuleContext(LinkContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(JSONParser.COMMA, 0); }
		public LinklistContext linklist() {
			return getRuleContext(LinklistContext.class,0);
		}
		public LinklistContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linklist; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).enterLinklist(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).exitLinklist(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitLinklist(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinklistContext linklist() throws RecognitionException {
		LinklistContext _localctx = new LinklistContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_linklist);
		try {
			setState(110);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(105); 
				link();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(106); 
				link();
				setState(107); 
				match(COMMA);
				setState(108); 
				linklist();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeContext extends ParserRuleContext {
		public Token name;
		public Token group;
		public TerminalNode OPBR() { return getToken(JSONParser.OPBR, 0); }
		public List<TerminalNode> QUOTATION() { return getTokens(JSONParser.QUOTATION); }
		public TerminalNode QUOTATION(int i) {
			return getToken(JSONParser.QUOTATION, i);
		}
		public TerminalNode NAMELIT() { return getToken(JSONParser.NAMELIT, 0); }
		public List<TerminalNode> COLON() { return getTokens(JSONParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(JSONParser.COLON, i);
		}
		public TerminalNode COMMA() { return getToken(JSONParser.COMMA, 0); }
		public TerminalNode GROUPLIT() { return getToken(JSONParser.GROUPLIT, 0); }
		public NodeAttrListContext nodeAttrList() {
			return getRuleContext(NodeAttrListContext.class,0);
		}
		public TerminalNode CLBR() { return getToken(JSONParser.CLBR, 0); }
		public TerminalNode NAME() { return getToken(JSONParser.NAME, 0); }
		public TerminalNode INT() { return getToken(JSONParser.INT, 0); }
		public NodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_node; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).enterNode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).exitNode(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitNode(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeContext node() throws RecognitionException {
		NodeContext _localctx = new NodeContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_node);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112); 
			match(OPBR);
			setState(113); 
			match(QUOTATION);
			setState(114); 
			match(NAMELIT);
			setState(115); 
			match(QUOTATION);
			setState(116); 
			match(COLON);
			setState(117); 
			match(QUOTATION);
			setState(118); 
			((NodeContext)_localctx).name = match(NAME);
			setState(119); 
			match(QUOTATION);
			setState(120); 
			match(COMMA);
			setState(121); 
			match(QUOTATION);
			setState(122); 
			match(GROUPLIT);
			setState(123); 
			match(QUOTATION);
			setState(124); 
			match(COLON);
			setState(125); 
			((NodeContext)_localctx).group = match(INT);
			setState(126); 
			nodeAttrList();
			setState(127); 
			match(CLBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NodeAttrListContext extends ParserRuleContext {
		public TerminalNode COMMA() { return getToken(JSONParser.COMMA, 0); }
		public NodeAttrContext nodeAttr() {
			return getRuleContext(NodeAttrContext.class,0);
		}
		public NodeAttrListContext nodeAttrList() {
			return getRuleContext(NodeAttrListContext.class,0);
		}
		public NodeAttrListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nodeAttrList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).enterNodeAttrList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).exitNodeAttrList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitNodeAttrList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NodeAttrListContext nodeAttrList() throws RecognitionException {
		NodeAttrListContext _localctx = new NodeAttrListContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_nodeAttrList);
		try {
			setState(134);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(129); 
				match(COMMA);
				setState(130); 
				nodeAttr();
				setState(131); 
				nodeAttrList();
				}
				break;
			case CLBR:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinkContext extends ParserRuleContext {
		public LinkNodeTSContext source;
		public LinkNodeTSContext target;
		public Token value;
		public TerminalNode OPBR() { return getToken(JSONParser.OPBR, 0); }
		public List<TerminalNode> QUOTATION() { return getTokens(JSONParser.QUOTATION); }
		public TerminalNode QUOTATION(int i) {
			return getToken(JSONParser.QUOTATION, i);
		}
		public TerminalNode SOURCELIT() { return getToken(JSONParser.SOURCELIT, 0); }
		public List<TerminalNode> COLON() { return getTokens(JSONParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(JSONParser.COLON, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(JSONParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(JSONParser.COMMA, i);
		}
		public TerminalNode TARGETLIT() { return getToken(JSONParser.TARGETLIT, 0); }
		public TerminalNode VALUELIT() { return getToken(JSONParser.VALUELIT, 0); }
		public LinkAttrListContext linkAttrList() {
			return getRuleContext(LinkAttrListContext.class,0);
		}
		public TerminalNode CLBR() { return getToken(JSONParser.CLBR, 0); }
		public List<LinkNodeTSContext> linkNodeTS() {
			return getRuleContexts(LinkNodeTSContext.class);
		}
		public LinkNodeTSContext linkNodeTS(int i) {
			return getRuleContext(LinkNodeTSContext.class,i);
		}
		public TerminalNode INT() { return getToken(JSONParser.INT, 0); }
		public LinkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_link; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).enterLink(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).exitLink(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitLink(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinkContext link() throws RecognitionException {
		LinkContext _localctx = new LinkContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_link);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); 
			match(OPBR);
			setState(137); 
			match(QUOTATION);
			setState(138); 
			match(SOURCELIT);
			setState(139); 
			match(QUOTATION);
			setState(140); 
			match(COLON);
			setState(141); 
			((LinkContext)_localctx).source = linkNodeTS();
			setState(142); 
			match(COMMA);
			setState(143); 
			match(QUOTATION);
			setState(144); 
			match(TARGETLIT);
			setState(145); 
			match(QUOTATION);
			setState(146); 
			match(COLON);
			setState(147); 
			((LinkContext)_localctx).target = linkNodeTS();
			setState(148); 
			match(COMMA);
			setState(149); 
			match(QUOTATION);
			setState(150); 
			match(VALUELIT);
			setState(151); 
			match(QUOTATION);
			setState(152); 
			match(COLON);
			setState(153); 
			((LinkContext)_localctx).value = match(INT);
			setState(154); 
			linkAttrList();
			setState(155); 
			match(CLBR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinkNodeTSContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(JSONParser.INT, 0); }
		public TerminalNode NAME() { return getToken(JSONParser.NAME, 0); }
		public LinkNodeTSContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linkNodeTS; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).enterLinkNodeTS(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof JSONListener ) ((JSONListener)listener).exitLinkNodeTS(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof JSONVisitor ) return ((JSONVisitor<? extends T>)visitor).visitLinkNodeTS(this);
			else return visitor.visitChildren(this);
		}
	}
